tests/dataset/tpc-ds/compiler/cpp/q89.error
/tmp/TestCPPCompiler_TPCDSQueriesq892010743432/001/prog.cpp: In function ‘int main()’:
/tmp/TestCPPCompiler_TPCDSQueriesq892010743432/001/prog.cpp:56:12: error: conversion from ‘vector<std::unordered_map<std::__cxx11::basic_string<char>, int>>’ to non-scalar type ‘vector<std::__cxx11::basic_string<char>>’ requested
   56 |       std::vector<decltype(std::unordered_map<std::string, decltype(40)>{
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   57 |           {std::string("price"), 40}})>{
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   58 |           std::unordered_map<std::string, decltype(40)>{
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   59 |               {std::string("price"), 40}},
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   60 |           std::unordered_map<std::string, decltype(30)>{
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   61 |               {std::string("price"), 30}},
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   62 |           std::unordered_map<std::string, decltype(19)>{
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   63 |               {std::string("price"), 19}}};
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq892010743432/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq892010743432/001/prog.cpp:67:26: error: ‘s’ was not declared in this scope
   67 |     std::vector<decltype(s.price)> __items;
      |                          ^
/tmp/TestCPPCompiler_TPCDSQueriesq892010743432/001/prog.cpp:67:34: error: template argument 1 is invalid
   67 |     std::vector<decltype(s.price)> __items;
      |                                  ^
/tmp/TestCPPCompiler_TPCDSQueriesq892010743432/001/prog.cpp:67:34: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCDSQueriesq892010743432/001/prog.cpp:69:15: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
   69 |       __items.push_back(s.price);
      |               ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq892010743432/001/prog.cpp:69:27: error: ‘class std::__cxx11::basic_string<char>’ has no member named ‘price’
   69 |       __items.push_back(s.price);
      |                           ^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq892010743432/001/prog.cpp: In instantiation of ‘main()::<lambda(auto:1)> [with auto:1 = int]’:
/tmp/TestCPPCompiler_TPCDSQueriesq892010743432/001/prog.cpp:66:5:   required from here
/tmp/TestCPPCompiler_TPCDSQueriesq892010743432/001/prog.cpp:65:30: error: request for member ‘begin’ in ‘v’, which is of non-class type ‘int’
   65 |     return std::accumulate(v.begin(), v.end(), 0.0);
      |                            ~~^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq892010743432/001/prog.cpp:65:41: error: request for member ‘end’ in ‘v’, which is of non-class type ‘int’
   65 |     return std::accumulate(v.begin(), v.end(), 0.0);
      |                                       ~~^~~
